<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Change App Name -->
    <string name="app_name">YoVideo</string>

    <!-- Change Facebook Dev Id -->
    <string name="facebook_app_id">694268657341835</string>
    <!--<string name="facebook_app_id">1705400019740975</string>-->

    <!-- Change AdMob Id -->
    <string name="admod_app_id">ca-app-pub-8000676937410247~6731808018</string>
    <string name="banner_ad_unit_id">ca-app-pub-8000676937410247/3638740815</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-8000676937410247/9545673611</string>

    <!-- Change JW_LICENSE_KEY -->
    <string name="jw_license_key">VhdGGWw+4IX/o0y9QxdrKIS6R/CddyhGD1i2UA==</string>

    <string name="cm_cancel">Cancel</string>
    <string name="cm_close">Close</string>
    <string name="cm_continue">Continue</string>
    <string name="cm_submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="text_fm_version">Version %s</string>
    <string name="text_fm_icon_assets">"assets://%s" </string>

    <string name="action_settings">Settings</string>
    <string name="other">Other</string>

    <string name="generic_server_down">Generic Server Down</string>
    <string name="no_internet">You need Internet connection to use our application. Please check your device\'s connection settings</string>
    <string name="generic_error">Generic Error</string>

    <string name="menu_most_view">Most view</string>
    <string name="menu_latest">Latest</string>

    <string name="closedrawer">Close drawer</string>
    <string name="opendrawer">Open drawer</string>

    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="series">Series</string>

    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="newest">Newest</string>
    <string name="featured">Featured</string>

    <string name="all_category">All Categories</string>

    <!-- News -->
    <string name="news_latest">Latest</string>
    <string name="news_categories">Categories</string>

    <!-- MENU -->
    <string name="menu_home">Home page</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_info">About us</string>
    <string name="menu_condition">Terms and Conditions</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_download">My Download</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_recent_video">Recent Videos</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_notification_detail">Notification Detail</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_currency">Account Balance</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_news">News</string>

    <!-- fragment Login -->
    <string name="login_signin">Sign in</string>
    <string name="login_by_facebook">Signin with Facebook</string>
    <string name="login_by_google">Signin with Google</string>
    <string name="login_create_account">New to YoVideo? Sign up now</string>
    <string name="login_forgot_pass">Forgot password</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirm">Confirm Password</string>
    <string name="login_have_an_account">Don&#180;t have an account?</string>
    <string name="login">Login</string>
    <string name="notice">Notice</string>
    <string name="email">Email</string>

    <!-- edit account -->
    <string name="edit_account_title">Edit my account info </string>
    <string name="my_account_title">My account</string>
    <string name="edit_account_des">Change account information</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_des">Change Password Authentic</string>
    <string name="logout_des">Are you sure you want to logout?</string>
    <string name="change_pass_current_pass">Current Password</string>
    <string name="change_pass_new_pass">New Password</string>
    <string name="change_pass_confirm_new_pass">Confirm New Password</string>

    <string name="checkout_guest_city">City (*)</string>
    <string name="checkout_guest_zip">Post/Zip Code</string>
    <string name="checkout_guest_phone">Phone Number (*)</string>
    <string name="checkout_guest_tax">Tax/VAT number (*)</string>
    <string name="checkout_guest_email">Email (*)</string>
    <string name="checkout_billing_first_name">First Name (*)</string>
    <string name="checkout_billing_last_name">Last Name (*)</string>
    <string name="checkout_billing_address">Address (*)</string>
    <string name="checkout_billing_address_1">Address Line (*)</string>
    <string name="checkout_billing_address_2">Address Line 2</string>
    <string name="checkout_billing_city">City (*)</string>

    <!-- message -->
    <string name="msg_null_email">You must enter an email address</string>
    <string name="msg_false_email">Incorrect email</string>
    <string name="msg_null_username">You must enter an username</string>
    <string name="msg_null_pass">You must enter a password</string>
    <string name="msg_null_passforgot">You must enter confirm password</string>
    <string name="msg_false_passconfirm">Password doesn&#180;t match</string>
    <string name="msg_password_error_size">Please choose a password between 6-20 characters</string>
    <string name="msg_authentic_loading">Authenticating...</string>
    <string name="msg_register_loading">Registering...</string>
    <string name="msg_forgot_pass_loading">Forgetting Password...</string>
    <string name="msg_change_pass_loading">Changing Password...</string>
    <string name="msg_updating_loading">Updating...</string>
    <string name="msg_loading">Loading... Please wait</string>
    <string name="msg_change_pass_success">Password Changed Successful</string>
    <string name="msg_update_acc_success">Customer Info Updated Successful</string>
    <string name="msg_cannot_sign_in">Cannot sign in</string>
    <string name="msg_register_notice">Your Personal information will be kept secure with us</string>
    <string name="msg_forgot_pass_notice">Please enter the email you used to register. Check your email for the instruction to receive your password</string>
    <string name="msg_forgot_pass_check_mail">Please check your email for the instruction to receive your password</string>
    <string name="msg_register_conditions">Choose Continue if you agree with our T&#38;C</string>
    <string name="msg_null_phone">You must enter phone number</string>
    <string name="msg_null_address">You must enter an address</string>
    <string name="msg_null_city">You must enter a city</string>
    <string name="msg_null_first_name">You must enter first name</string>
    <string name="msg_null_last_name">You must enter last name</string>
    <string name="msg_null_key_word">Please enter key word</string>
    <string name="error_init_failure">Initialization failure: Unable to play video</string>
    <string name="msg_request_login">You need to login to continue</string>
    <string name="msg_request_login_vip">Some contents are only for premium members. Please log in to view</string>
    <string name="msg_need_vip">Some contents are only for premium members. Please update your account</string>
    <string name="msg_no_result">No result found</string>
    <string name="msg_loading_common">Please wait while the content loads</string>
    <string name="msg_delete_video">Are you sure you want to delete this video?</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="selection_default">Default</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>
</resources>
