<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:src="@drawable/img_logo_splash"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <EditText
                android:id="@+id/edtUsername"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_username_selector"
                android:hint="@string/login_username"
                android:maxLength="15" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/icon_email_selector"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/icon_password_selector"
                android:hint="@string/login_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edtPassConfirm"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/icon_password_selector"
                android:hint="@string/login_password_confirm"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg_register_conditions"
                    android:textColor="@color/common_text_selector" />

                <Button
                    android:id="@+id/buttonSubmitRegister"
                    style="@style/Button.Common"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/cm_submit"
                    android:textAllCaps="true"
                    android:textStyle="bold"></Button>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#50ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_register_notice" />
    </LinearLayout>
</LinearLayout>

