<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_forgot_pass_notice"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_email_selector"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Button.Common"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/cm_submit"
                android:textAllCaps="true"
                android:textStyle="bold"></Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

